# af2rave

./: .gitignore  .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  environment.yml  feature.ipynb  pyproject.toml  requirements_dev.txt  tox.ini
af2rave/: __init__.py  af2rave.py  amino.py  app.py  cli.py  colvar.py  feature.py  features.py  simulation.py
af2rave/alphafold/: __init__.py  base.py  colabfold.py  openfold.py
af2rave/amino/: __init__.py  __main__.py  amino.py  wrapper.py
af2rave/feature/: __init__.py  analysis.py  colvar.py  feature.py  utils.py
af2rave/simulation/: __init__.py  cv_reporter.py  metadynamics.py  preparation.py  reporter.py  simulation.py  utils.py
af2rave/spib/: SPIB_training.py  __init__.py  __main__.py  cli.py  spib.py  spib_result.py  wrapper.py
datasets/DDR1_MSA8/: file_details.txt
docs/: Makefile  af2rave.alphafold.rst  af2rave.amino.rst  af2rave.colvar.rst  af2rave.feature.rst  af2rave.rst  af2rave.simulation.rst  af2rave.spib.rst  authors.rst  conf.py  history.rst  index.rst  installation.rst  make.bat  modules.rst  readme.rst  requirement.txt  usage.amino.rst  usage.feature.rst  usage.mdsim.rst  usage.preparemd.rst  usage.rst  usage.spib.rst
forcefield/: charmm36m_protein.xml
notebooks/: Folding_Feature_selection.ipynb  SPIB_Results.ipynb  Tutorial_1_data_preprocess.ipynb
src/af2rave/: cli.py
tests/: __init__.py  test_af2rave.py  test_amino.py  test_colvar.py  test_feature.py  test_simulation.py  test_spib.py
