[build-system]
requires = ["setuptools>=61.0", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "af2rave"
version = "0.1.0"
description = "AlphaFold2-RAVE package that generates boltzman-ranked non-native conformations for proteins"
readme = "README.rst"
authors = [
  {name = "Da Teng", email = "tengda1997@gmail.com"}
]
maintainers = [
  {name = "Da Teng", email = "tengda1997@gmail.com"}
]
classifiers = [
  "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.5",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python"
]
license = {text = "MIT license"}
requires-python = ">= 3.10"
dependencies = [
  "natsort",
  "mdtraj",
  "numpy<2",
  "openmm[cuda12]",
  "pdbfixer @ git+https://github.com/openmm/pdbfixer.git",
  "torch",
  "scikit-learn",
  "openmm",
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.scripts]
af2rave = "af2rave.cli:app"

[project.urls]
bugs = "https://github.com/tiwarylab/af2rave/issues"
changelog = "https://github.com/tiwarylab/af2rave/blob/master/changelog.md"
homepage = "https://github.com/tiwarylab/af2rave"

[tool.setuptools.packages.find]
where = ["."]        
include = ["af2rave*"]
exclude = ["docs*", "tests*"]
namespaces = true    

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

